--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1{
 }
 section{
       display: flex;
-
+      margin-bottom: 100px;
 }
 .half-width{
       width: 50%;
@@ -32,4 +32,9 @@ section{
 .top_baner{
       background-image: url(./images/top-banner.png);
       background-repeat: no-repeat;
+}
+.dream_big_section{
+      background-image: url(./images/dream-bg.png);
+      background-repeat: no-repeat;
+      background-position: right;
 }
