--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1{
 .orange-color{
       color: orange;
 }
-section{
+.flexible-container{
       display: flex;
       margin-bottom: 100px;
 }
@@ -37,4 +37,36 @@ section{
       background-image: url(./images/dream-bg.png);
       background-repeat: no-repeat;
       background-position: right;
+}
+.exprence-item{
+      box-shadow: 0px 0px 30px gray;
+      width: 40%;
+      margin-left: 5%;
+      margin-right: 5%;
+      padding-left: 20px;
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
+      padding: 20px;
+
+}
+h2{
+      font-size: 40px;
+}
+.exprence_area{
+      background-image: url(./images/exp-bg.png);
+      background-repeat: no-repeat;
+      background-position: left;
+}
+#full-stack-developer{
+      border-left: 7px solid tomato;
+      
+}
+#baby-web-developer{
+      border-left: 7px solid blue;
+}
+footer p{
+      text-align: center;
 }
